# POC_C

./: .gitignore  INTEGRATION_STATUS.md  Jenkins.yml  MISRA_COMPLIANCE_REPORT.md  MISRA_Compliance_Report.html  Mecedes_features.md  Mercedes_req.md  PROJECT_DEMO_PRESENTATION.md  build_with_opencv.bat  count_lines.py  cppcheck_analysis_report.md  cppcheck_final_xml.xml  cppcheck_misra_poc.md  cppcheck_report.html  cppcheck_results.txt  final_misra_output.txt  generate_html_report.py  loc_report.txt  misra.py  misra_analysis_output.txt  misra_check.ps1  misra_exhaustive_output.txt  misra_simple.py  run_all_tests.bat  run_all_tests.ps1  run_cppcheck_misra.ps1  run_misra_analysis.ps1  run_misra_simple.ps1  run_tests.ps1  test_report.md
.claude/: settings.local.json
car_poc/: CMakeLists.txt  README.md  generate_coverage.bat  generate_html_coverage_report.py
car_poc/cfg/: calib.h  scenario_default.csv
car_poc/docs/: autobrake_evals_implemented.md  misra_policy.md
car_poc/eval/: check_thresholds.py  thresholds.json
car_poc/eval/hooks/: eval_hooks.c  eval_hooks.h
car_poc/eval/metrics/: metrics_autobrake.c  metrics_speedgov.c  metrics_wipers.c
car_poc/eval/reports/: autobrake_summary.json  autobrake_trace.csv
car_poc/eval/scenarios/: autobrake_ped_close.json  speedgov_limit_update.json  speedgov_opencv_detection.json  speedgov_overspeed.json  speedgov_sensor_failure.json  wipers_hysteresis.json  wipers_rain_progression.json  wipers_stale_data.json
car_poc/evals/: autobrake_evals.md  speedgov_opencv_evals.md  wipers_evals.md
car_poc/inc/: app_autobrake.h  app_autopark.h  app_climate.h  app_speedgov.h  app_voice.h  app_wipers.h  config.h  hal.h  io_logger.h  opencv_speed_detection.h  platform.h  speed_sign_vision.h
car_poc/open-cv/: opencv_speed_governance_poc.md
car_poc/sim/: scenario.c  scenario.h
car_poc/sim/scenarios/: city_50kph.csv  highway_100kph.csv  rain_parking.csv
car_poc/src/: app_autobrake.c  app_autopark.c  app_climate.c  app_speedgov.c  app_voice.c  app_wipers.c  hal_interactive.c  hal_mock_pc.c  hal_sdl.c  io_logger.c  main.c  opencv_speed_detection.cpp  platform_pc.c  platform_sdl.c  speed_sign_vision.c
car_poc/tests/: iso-test.md  test_autobrake.c  test_autobrake_eval.c  test_autopark.c  test_climate.c  test_speedgov.c  test_wipers.c
car_poc/tests/unity/: unity.c  unity.h
car_poc/tools/: format.sh  run_static.sh
test_reports/: test_summary_20250829_165747.json  test_summary_20250829_165747.txt
test_reports/coverage/: coverage_report.html
test_reports/misra/: misra_report.txt  misra_report.xml
